# harmonic_balance_python

./: .pre-commit-config.yaml  LICENSE  README.md  experiment_product_real.ipynb  pyproject.toml  test.ipynb
.cspell/: custom-python.txt  harmonic_balance.txt
experiment/: aft.ipynb  balance.ipynb  balance_aft.ipynb  continuation.ipynb  duffing.ipynb  duffing_alc.ipynb  duffing_plc.ipynb  spring_mass_2dof.ipynb  spring_mass_2dof_alc.ipynb  spring_mass_2dof_plc.ipynb
src/harmonic_balance/: __init__.py  aft.py  aft_trig.py  arclength_continuation.py  continuation.py  freq.py  pseudo_arclength_continuation.py  solve.py  utils.py
theory/: theory.biblatex  theory.tex
theory/style/: bold.tex  common.tex  style.sty
